Allow task providers to be directly configured via closure in Groovy DSL

--- a/subprojects/docs/src/snippets/ivy-publish/conditional-publishing/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/ivy-publish/conditional-publishing/groovy/build.gradle
@@ -19,7 +19,7 @@ publishing {
         }
         binaryAndSources(IvyPublication) {
             from components.java
-            artifact sourcesJar
+            artifact sourcesJar.get()
         }
     }
     repositories {
