--- a/subprojects/docs/src/snippets/ivy-publish/distribution/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/ivy-publish/distribution/groovy/build.gradle
@@ -28,8 +28,8 @@ distributions {
 publishing {
     publications {
         myDistribution(IvyPublication) {
-            artifact distZip
-            artifact customDistTar
+            artifact distZip.get()
+            artifact customDistTar.get()
         }
     }
 }
