--- a/subprojects/docs/src/snippets/native-binaries/idl/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/native-binaries/idl/groovy/build.gradle
@@ -14,7 +14,7 @@ model {
         main(NativeExecutableSpec) {
             sources {
                 idlOutput(CSourceSet) {
-                    generatedBy tasks.idl
+                    generatedBy tasks.idl.get()
                 }
                 c.lib sources.idlOutput
             }
