--- a/subprojects/docs/src/snippets/signing/in-memory-subkey/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/signing/in-memory-subkey/groovy/build.gradle
@@ -13,6 +13,6 @@ signing {
     def signingKey = findProperty("signingKey")
     def signingPassword = findProperty("signingPassword")
     useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
-    sign stuffZip
+    sign stuffZip.get()
 }
 // end::signing[]
