--- a/subprojects/docs/src/snippets/signing/in-memory/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/signing/in-memory/groovy/build.gradle
@@ -12,6 +12,6 @@ signing {
     def signingKey = findProperty("signingKey")
     def signingPassword = findProperty("signingPassword")
     useInMemoryPgpKeys(signingKey, signingPassword)
-    sign stuffZip
+    sign stuffZip.get()
 }
 // end::signing[]
